<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_title_label"/>

    <EditText
        android:id="@+id/crimeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/crime_title_hint"
        android:inputType="text|textCapSentences"/>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crime_details_label"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/material_margin"
        android:layout_marginStart="@dimen/material_margin"
        android:orientation="horizontal">

        <Button
            android:id="@+id/crimeDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/small_margin"
            android:layout_weight="1"
            android:text="@string/date_picker_button_title"/>

        <Button
            android:id="@+id/crimeTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_weight="1"
            android:text="@string/time_picker_button_title"/>

    </LinearLayout>

    <CheckBox
        android:id="@+id/crimeSolved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/material_margin"
        android:layout_marginRight="@dimen/material_margin"
        android:text="@string/crime_solved_label"/>

</LinearLayout>